Removed archetype from module name

--- a/Enemy/pom.xml
+++ b/Enemy/pom.xml
@@ -7,8 +7,9 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <artifactId>Enemy</artifactId>
-    <name>Archetype - Enemy</name>
+    <name>Enemy</name>
     <url>http://maven.apache.org</url>
+
     <packaging>jar</packaging>
 </project>
 
