--- a/GameEngine/pom.xml
+++ b/GameEngine/pom.xml
@@ -7,7 +7,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <artifactId>GameEngine</artifactId>
-    <name>Archetype - GameEngine</name>
+    <name>GameEngine</name>
     <url>http://maven.apache.org</url>
 
     <packaging>jar</packaging>
