--- a/Tower/pom.xml
+++ b/Tower/pom.xml
@@ -7,7 +7,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <artifactId>Tower</artifactId>
-    <name>Archetype - Tower</name>
+    <name>Tower</name>
     <url>http://maven.apache.org</url>
     <packaging>jar</packaging>
 </project>
