--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,16 @@
     <module>Tower</module>
     <module>ObjectPool</module>
     <module>FXGL</module>
+      <module>Common</module>
   </modules>
+<dependencies>
+  <dependency>
+    <groupId>org.javatuples</groupId>
+    <artifactId>javatuples</artifactId>
+    <version>1.2</version>
+  </dependency>
+</dependencies>
+
 
   <build>
     <plugins>
