--- a/GameEngine/pom.xml
+++ b/GameEngine/pom.xml
@@ -16,6 +16,12 @@
             <artifactId>fxgl</artifactId>
             <version>21</version>
         </dependency>
+        <dependency>
+            <groupId>dk.sdu.mmmi.GRP7</groupId>
+            <artifactId>Common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
