--- a/Bullet/pom.xml
+++ b/Bullet/pom.xml
@@ -6,8 +6,8 @@
         <artifactId>SMP4</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-    <artifactId>Enemy</artifactId>
-    <name>Enemy</name>
+    <artifactId>Bullet</artifactId>
+    <name>Bullet</name>
     <url>http://maven.apache.org</url>
     <dependencies>
         <dependency>
@@ -15,11 +15,6 @@
             <artifactId>Common</artifactId>
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.github.almasb</groupId>
-            <artifactId>fxgl-entity</artifactId>
-            <version>21</version>
         </dependency>
     </dependencies>
     <packaging>jar</packaging>
