--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
     <module>ObjectPool</module>
     <module>FXGL</module>
       <module>Common</module>
+      <module>Bullet</module>
   </modules>
 <dependencies>
   <dependency>
