--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
     <module>Tower</module>
     <module>ObjectPool</module>
     <module>Common</module>
+      <module>Bullet</module>
   </modules>
   <properties>
     <java>java</java>
