--- a/Enemy/pom.xml
+++ b/Enemy/pom.xml
@@ -10,6 +10,19 @@
     <name>Enemy</name>
     <url>http://maven.apache.org</url>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>21</source>
+                    <target>21</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
     <packaging>jar</packaging>
 </project>
 
