--- a/Player/pom.xml
+++ b/Player/pom.xml
@@ -9,5 +9,19 @@
     <artifactId>Player</artifactId>
     <name>Player</name>
     <url>http://maven.apache.org</url>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>21</source>
+                    <target>21</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
     <packaging>jar</packaging>
 </project>
