--- a/WaveManager/pom.xml
+++ b/WaveManager/pom.xml
@@ -9,6 +9,18 @@
     <artifactId>WaveManager</artifactId>
     <name>Archetype - WaveManager</name>
     <url>http://maven.apache.org</url>
+    <dependencies>
+        <dependency>
+            <groupId>com.github.almasb</groupId>
+            <artifactId>fxgl-entity</artifactId>
+            <version>21</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.almasb</groupId>
+            <artifactId>fxgl</artifactId>
+            <version>21</version>
+        </dependency>
+    </dependencies>
     <build>
         <plugins>
             <plugin>
