--- a/Common/pom.xml
+++ b/Common/pom.xml
@@ -7,7 +7,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <artifactId>Common</artifactId>
-    <name>Archetype - Common</name>
+    <name>Common</name>
     <url>http://maven.apache.org</url>
     <dependencies>
         <dependency>
