--- a/WaveManager/pom.xml
+++ b/WaveManager/pom.xml
@@ -10,15 +10,15 @@
     <name>Archetype - WaveManager</name>
     <url>http://maven.apache.org</url>
     <dependencies>
-        <dependency>
+        <!--<dependency>
             <groupId>com.github.almasb</groupId>
             <artifactId>fxgl-entity</artifactId>
             <version>21</version>
-        </dependency>
+        </dependency> -->
         <dependency>
             <groupId>com.github.almasb</groupId>
             <artifactId>fxgl</artifactId>
-            <version>21</version>
+            <version>21.1</version>
         </dependency>
     </dependencies>
     <build>
