--- a/Enemy/pom.xml
+++ b/Enemy/pom.xml
@@ -21,6 +21,11 @@
             <artifactId>fxgl-entity</artifactId>
             <version>21</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.almasb</groupId>
+            <artifactId>fxgl-core</artifactId>
+            <version>21</version>
+        </dependency>
     </dependencies>
     <packaging>jar</packaging>
     <build>
