--- a/WaveManager/pom.xml
+++ b/WaveManager/pom.xml
@@ -21,6 +21,7 @@
             <version>21.1</version>
         </dependency>
     </dependencies>
+    <packaging>jar</packaging>
     <build>
         <plugins>
             <plugin>
