broken map stuff

--- a/Map/pom.xml
+++ b/Map/pom.xml
@@ -10,4 +10,11 @@
     <name>Map</name>
     <url>http://maven.apache.org</url>
     <packaging>jar</packaging>
+    <dependencies>
+        <dependency>
+            <groupId>com.github.almasb</groupId>
+            <artifactId>fxgl</artifactId>
+            <version>21.1</version>
+        </dependency>
+    </dependencies>
 </project>
