--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
     <module>WaveManager</module>
     <module>Common</module>
       <module>Bullet</module>
+      <module>PathFinding</module>
   </modules>
   <properties>
     <java>java</java>
