--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,5 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>dk.sdu.mmmi.GRP7</groupId>
   <artifactId>SMP4</artifactId>
@@ -16,6 +16,8 @@
     <module>ObjectPool</module>
     <module>Common</module>
     <module>UI</module>
+    <module>Shop</module>
+    <module>Health</module>
   </modules>
   <properties>
     <java>java</java>
