--- a/ObjectPool/pom.xml
+++ b/ObjectPool/pom.xml
@@ -9,5 +9,18 @@
     <artifactId>ObjectPool</artifactId>
     <name>ObjectPool</name>
     <url>http://maven.apache.org</url>
+    <dependencies>
+        <dependency>
+            <groupId>dk.sdu.mmmi.GRP7</groupId>
+            <artifactId>Common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.github.almasb</groupId>
+            <artifactId>fxgl</artifactId>
+            <version>21.1</version>
+        </dependency>
+    </dependencies>
     <packaging>jar</packaging>
 </project>
