--- a/UI/pom.xml
+++ b/UI/pom.xml
@@ -9,4 +9,11 @@
     <artifactId>UI</artifactId>
     <name>UI</name>
     <url>http://maven.apache.org</url>
+    <dependencies>
+        <dependency>
+            <groupId>com.github.almasb</groupId>
+            <artifactId>fxgl</artifactId>
+            <version>21.1</version>
+        </dependency>
+    </dependencies>
 </project>
