--- a/CommonEnemy/pom.xml
+++ b/CommonEnemy/pom.xml
@@ -6,7 +6,7 @@
         <artifactId>SMP4</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-    <artifactId>Enemy</artifactId>
+    <artifactId>CommonEnemy</artifactId>
     <name>Enemy</name>
     <url>http://maven.apache.org</url>
     <dependencies>
