--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
   <modules>
     <module>GameEngine</module>
     <module>Player</module>
-    <module>Enemy</module>
+    <module>CommonEnemy</module>
     <module>Map</module>
     <module>Tower</module>
     <module>ObjectPool</module>
@@ -21,6 +21,7 @@
     <module>UI</module>
     <module>Shop</module>
     <module>Health</module>
+    <module>NormalEnemy</module>
   </modules>
   <properties>
     <java>java</java>
