--- a/Tower/pom.xml
+++ b/Tower/pom.xml
@@ -6,7 +6,7 @@
         <artifactId>SMP4</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-    <artifactId>Tower</artifactId>
+    <artifactId>CommonTower</artifactId>
     <name>Tower</name>
     <url>http://maven.apache.org</url>
     <dependencies>
