Common Tower implementation (trying rebase)

--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
     <module>CommonBullet</module>
       <module>CommonTower</module>
 
+    <module>NormalTower</module>
   </modules>
   <properties>
     <java>java</java>
