--- a/CommonEnemy/pom.xml
+++ b/CommonEnemy/pom.xml
@@ -7,7 +7,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <artifactId>CommonEnemy</artifactId>
-    <name>Enemy</name>
+    <name>CommonEnemy</name>
     <url>http://maven.apache.org</url>
     <dependencies>
         <dependency>
