--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,8 @@
     <module>Shop</module>
     <module>Health</module>
     <module>NormalEnemy</module>
+    <module>BossEnemy</module>
+
   </modules>
   <properties>
     <java>java</java>
