--- a/NormalEnemy/pom.xml
+++ b/NormalEnemy/pom.xml
@@ -29,6 +29,11 @@
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.github.almasb</groupId>
+            <artifactId>fxgl</artifactId>
+            <version>21.1</version>
+        </dependency>
     </dependencies>
     <packaging>jar</packaging>
 </project>
