--- a/BossEnemy/pom.xml
+++ b/BossEnemy/pom.xml
@@ -3,7 +3,11 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
+    <parent>
+        <groupId>dk.sdu.mmmi.GRP7</groupId>
+        <artifactId>SMP4</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
     <groupId>dk.sdu.mmmi.GRP7</groupId>
     <artifactId>BossEnemy</artifactId>
     <name>BossEnemy</name>
@@ -28,10 +32,5 @@
     </dependencies>
     <version>1.0-SNAPSHOT</version>
 
-    <properties>
-        <maven.compiler.source>21</maven.compiler.source>
-        <maven.compiler.target>21</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
     <packaging>jar</packaging>
 </project>
