--- a/CommonTower/pom.xml
+++ b/CommonTower/pom.xml
@@ -12,9 +12,21 @@
     <packaging>jar</packaging>
     <dependencies>
         <dependency>
+            <groupId>dk.sdu.mmmi.GRP7</groupId>
+            <artifactId>Common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
             <groupId>com.github.almasb</groupId>
             <artifactId>fxgl</artifactId>
             <version>21.1</version>
+        </dependency>
+        <dependency>
+            <groupId>dk.sdu.mmmi.GRP7</groupId>
+            <artifactId>CommonEnemy</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 </project>
