--- a/CommonTower/pom.xml
+++ b/CommonTower/pom.xml
@@ -7,7 +7,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <artifactId>CommonTower</artifactId>
-    <name>Tower</name>
+    <name>CommonTower</name>
     <url>http://maven.apache.org</url>
     <dependencies>
         <dependency>
