--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
     <module>ObjectPool</module>
     <module>WaveManager</module>
     <module>Common</module>
-    <module>Bullet</module>
+    <module>CommonBullet</module>
     <module>UI</module>
     <module>Shop</module>
     <module>Health</module>
