Created bulletcomponent module, still tying up loose ends

--- a/pom.xml
+++ b/pom.xml
@@ -16,13 +16,14 @@
     <module>ObjectPool</module>
     <module>WaveManager</module>
     <module>Common</module>
-    <module>Bullet</module>
+    <module>CommonBullet</module>
     <module>UI</module>
     <module>Shop</module>
     <module>Health</module>
     <module>NormalEnemy</module>
     <module>NormalTower</module>
     <module>BossEnemy</module>
+      <module>CommonBullet</module>
 
   </modules>
   <properties>
