--- a/NormalTower/pom.xml
+++ b/NormalTower/pom.xml
@@ -10,11 +10,15 @@
     </parent>
 
     <artifactId>NormalTower</artifactId>
+    <name>NormalTower</name>
 
-    <properties>
-        <maven.compiler.source>22</maven.compiler.source>
-        <maven.compiler.target>22</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
-
+    <dependencies>
+        <dependency>
+            <groupId>dk.sdu.mmmi.GRP7</groupId>
+            <artifactId>CommonTower</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
+    <packaging>jar</packaging>
 </project>
