Player can now be reloaded without recompile!

--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
     <module>Health</module>
     <module>NormalEnemy</module>
     <module>BossEnemy</module>
+      <module>CommonPlayer</module>
 
   </modules>
   <properties>
