Created CommonBullet, Updated Dependencies, Renamed some things, deleted some things.

--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
     <module>NormalEnemy</module>
     <module>BossEnemy</module>
       <module>CommonPlayer</module>
+    <module>CommonBullet</module>
 
   </modules>
   <properties>
