--- a/WaveManager/pom.xml
+++ b/WaveManager/pom.xml
@@ -10,11 +10,6 @@
     <name>WaveManager</name>
     <url>http://maven.apache.org</url>
     <dependencies>
-        <!--<dependency>
-            <groupId>com.github.almasb</groupId>
-            <artifactId>fxgl-entity</artifactId>
-            <version>21</version>
-        </dependency> -->
         <dependency>
             <groupId>com.github.almasb</groupId>
             <artifactId>fxgl</artifactId>
@@ -31,6 +26,12 @@
             <artifactId>ObjectPool</artifactId>
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>RELEASE</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
     <packaging>jar</packaging>
