--- a/CommonEnemy/pom.xml
+++ b/CommonEnemy/pom.xml
@@ -17,6 +17,12 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
+            <groupId>dk.sdu.mmmi.GRP7</groupId>
+            <artifactId>Health</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
             <groupId>com.github.almasb</groupId>
             <artifactId>fxgl</artifactId>
             <version>21.1</version>
@@ -24,6 +30,12 @@
         <dependency>
             <groupId>dk.sdu.mmmi.GRP7</groupId>
             <artifactId>Map</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>dk.sdu.mmmi.GRP7</groupId>
+            <artifactId>ObjectPool</artifactId>
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
