--- a/NormalEnemy/pom.xml
+++ b/NormalEnemy/pom.xml
@@ -25,6 +25,18 @@
         </dependency>
         <dependency>
             <groupId>dk.sdu.mmmi.GRP7</groupId>
+            <artifactId>ObjectPool</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>dk.sdu.mmmi.GRP7</groupId>
+            <artifactId>Health</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>dk.sdu.mmmi.GRP7</groupId>
             <artifactId>Common</artifactId>
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
