Added two new enemies and balanced spawning a bit

--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,8 @@
     <module>Health</module>
     <module>NormalEnemy</module>
     <module>NormalTower</module>
+    <module>FastEnemy</module>
+    <module>HeavyEnemy</module>
   </modules>
   <properties>
     <java>java</java>
