--- a/HeavyEnemy/pom.xml
+++ b/HeavyEnemy/pom.xml
@@ -1,15 +1,14 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>dk.sdu.mmmi.GRP7</groupId>
         <artifactId>SMP4</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-
-    <artifactId>NormalEnemy</artifactId>
+    <artifactId>HeavyEnemy</artifactId>
+    <name>HeavyEnemy</name>
+    <url>http://maven.apache.org</url>
     <dependencies>
         <dependency>
             <groupId>dk.sdu.mmmi.GRP7</groupId>
