--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
     <module>NormalTower</module>
     <module>FastEnemy</module>
     <module>HeavyEnemy</module>
+      <module>FastTower</module>
   </modules>
   <properties>
     <java>java</java>
